feat: add endpoint for order creation