@@ -6,7 +6,6 @@ import br.com.javadevweek.smartdelivery.repository.ProductRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ProductService {
@@ -18,6 +17,6 @@ public class ProductService {
 
     public List<ProductDto> findAll() {
         var products = productRepository.findAll();
-        return products.stream().map(ProductMapper::entityToDto).collect(Collectors.toList());
+        return products.stream().map(ProductMapper::entityToDto).toList();
     }
 }
